# Zer0-ai-

./: .gitignore  README.md  hello.py  package-lock.json  package.json  pyproject.toml
client/: index.html  package.json
client/src/: App.jsx  index.css  main.jsx
client/src/api/: apiClient.js
client/src/components/: MindMapCanvas.jsx  NodeDetailsPanel.jsx  SidebarAI.jsx  Toolbar.jsx
client/src/pages/: Home.jsx  MapView.jsx
client/src/state/: useMapStore.js
integrations/tickersage/: ARCHITECTURE.md
integrations/tickersage/contracts/: market_snapshot.schema.json
server/: mindmap.db-shm  mindmap.db-wal  package.json
server/src/: db.js  index.js
server/src/models/: LinkModel.js  MapModel.js  NodeModel.js
server/src/routes/: ai.js  links.js  maps.js  nodes.js
server/src/services/: aiService.js  linkService.js  mapService.js  nodeService.js
shared/: types.js
src/zer0_ai/: __init__.py  cli.py  core.py
tests/: test_core.py
