[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zer0-ai"
version = "0.1.0"
description = "Starter Python project for Zer0-ai"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Zer0-ai" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
zer0-ai = "zer0_ai.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
